--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-		<title>时光印迹</title>
+		<title>无网不剩</title>
 		<link rel="stylesheet" type="text/css" href="/css/style.css" />
 		<link rel="stylesheet" type="text/css" href="/css/syntax.css" />
 		<link rel="alternate" type="application/rss+xml" title="RSS" href="http://feeds.feedburner.com/lzyy">
@@ -21,7 +21,7 @@
 	</head>
 
 	<body>
-		<div id="logo"><h1><a href="/">时光印迹</a></h1></div>
+		<div id="logo"><h1><a href="/">无网不剩</a></h1></div>
 		<div id="wrapper">
 			<div id="content" class="index">
 				<div id="sidebar">
