--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-		<title>{{ page.title }} - 无网不剩</title>
+		<title>{{ page.title }} - 时光印迹</title>
 		<link rel="stylesheet" type="text/css" href="/css/style.css" />
 		<link rel="stylesheet" type="text/css" href="/css/syntax.css" />
 		<link rel="alternate" type="application/rss+xml" title="RSS" href="http://feeds.feedburner.com/lzyy">
@@ -22,7 +22,7 @@
 	<body>
 		<div id="logo">
 			<span id="tags">生命只有一次，你可能会用它来做些伟大的事情</span>
-			<h1><a href="/">无网不剩</a></h1></div>
+			<h1><a href="/">时光印迹</a></h1></div>
 		<div id="wrapper">
 			<div id="content">
 				<a target="_blank" style="float:right;margin-top:15px" href="http://twitter.com/share?url=http://blog.leezhong.com{{ page.url }}&via=lzyy&text={{ page.title }}"><span class="balloon">retweet</span></a>
