--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 		<title>时光印迹</title>
 		<link rel="stylesheet" type="text/css" href="/css/style.css" />
 		<link rel="stylesheet" type="text/css" href="/css/syntax.css" />
-		<link rel="alternate" type="application/rss+xml" title="RSS" href="http://feeds.feedburner.com/lzyy">
+		<link rel="alternate" type="application/rss+xml" title="RSS" href="http://feeds.feedburner.com/timecho">
 		<script type="text/javascript">
 		  var _gaq = _gaq || [];
 		  _gaq.push(['_setAccount', 'UA-1281124-20']);
@@ -50,12 +50,7 @@
 
 				<div id="footer">
 					<div id="feed">
-						<div class="badget" id="github">
-							<a href="http://github.com/lzyy">
-							<span class="service">github</span>
-							<span class="info"> </span>
-							</a>
-						</div>
+						
 						<div class="badget" id="twt">
 							<a href="http://twitter.com/lzyy">
 							<span class="service">twitter</span>
@@ -63,7 +58,7 @@
 							</a>
 						</div>
 						<div class="badget" id="feedburner">
-							<a href="http://feeds.feedburner.com/lzyy">
+							<a href="http://feeds.feedburner.com/timecho">
 							<span class="service">rss</span>
 							<span class="info"> </span>
 							</a>
