--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 		<title>{{ page.title }} - 时光印迹</title>
 		<link rel="stylesheet" type="text/css" href="/css/style.css" />
 		<link rel="stylesheet" type="text/css" href="/css/syntax.css" />
-		<link rel="alternate" type="application/rss+xml" title="RSS" href="http://feeds.feedburner.com/lzyy">
+		<link rel="alternate" type="application/rss+xml" title="RSS" href="http://feeds.feedburner.com/timecho">
 		<script type="text/javascript">
 		  var _gaq = _gaq || [];
 		  _gaq.push(['_setAccount', 'UA-1281124-20']);
@@ -25,7 +25,7 @@
 			<h1><a href="/">时光印迹</a></h1></div>
 		<div id="wrapper">
 			<div id="content">
-				<a target="_blank" style="float:right;margin-top:15px" href="http://twitter.com/share?url=http://blog.leezhong.com{{ page.url }}&via=lzyy&text={{ page.title }}"><span class="balloon">retweet</span></a>
+				<a target="_blank" style="float:right;margin-top:15px" href="http://twitter.com/share?url=http://timecho.me{{ page.url }}&via=timecho&text={{ page.title }}"><span class="balloon">retweet</span></a>
 				<h2>{{ page.title }}</h2>
 				<div class="cnt">
 					{{ content }}
@@ -44,25 +44,20 @@
 				   (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
 				  })();
 				</script>
-				<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript=lzyyblog">comments powered by Disqus.</a></noscript>
+				<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript=timecho">comments powered by Disqus.</a></noscript>
 			</div>
 
 				<div id="footer">
 					<div id="feed">
-						<div class="badget" id="github">
-							<a href="http://github.com/lzyy">
-							<span class="service">github</span>
-							<span class="info"> </span>
-							</a>
-						</div>
+						
 						<div class="badget" id="twt">
-							<a href="http://twitter.com/lzyy">
+							<a href="http://twitter.com/timecho">
 							<span class="service">twitter</span>
 							<span class="info">600+</span>
 							</a>
 						</div>
 						<div class="badget" id="feedburner">
-							<a href="http://feeds.feedburner.com/lzyy">
+							<a href="http://feeds.feedburner.com/timecho">
 							<span class="service">rss</span>
 							<span class="info"> </span>
 							</a>
