--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 		<title>时光印迹</title>
 		<link rel="stylesheet" type="text/css" href="/css/style.css" />
 		<link rel="stylesheet" type="text/css" href="/css/syntax.css" />
-		<link rel="alternate" type="application/rss+xml" title="RSS" href="http://feed.feedsky.com/timecho">
+		<link rel="alternate" type="application/rss+xml" title="RSS" href="http://feeds.feedburner.com/timecho">
 		<script type="text/javascript">
 		  var _gaq = _gaq || [];
 		  _gaq.push(['_setAccount', 'UA-1281124-20']);
@@ -52,7 +52,7 @@
 					<div id="feed">
 						
 						<div class="badget" id="twt">
-							<a href="http://twitter.com/lzyy">
+							<a href="http://twitter.com/jsy2046">
 							<span class="service">twitter</span>
 							<span class="info">600+</span>
 							</a>
@@ -106,7 +106,7 @@
 
 if(!$.cookie('badget-github'))
 {
-	url = 'https://api.github.com/legacy/user/search/lzyy';
+	url = 'https://api.github.com/legacy/user/search/timecho';
 	$.getJSON(url+"?callback=?", function(data){
 		//var text = data['users'][0]['public_repo_count'] + ' / ' + data['user']['followers_count'];
 		var text = data['data']['users'][0]['followers_count'];
