--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@
 		<title>{{ page.title }} - 时光印迹</title>
 		<link rel="stylesheet" type="text/css" href="/css/style.css" />
 		<link rel="stylesheet" type="text/css" href="/css/syntax.css" />
-		<link rel="alternate" type="application/rss+xml" title="RSS" href="http://feed.feedsky.com/timecho">
+		<link rel="alternate" type="application/rss+xml" title="RSS" href="http://feeds.feedburner.com/timecho">
 		<script type="text/javascript">
 		  var _gaq = _gaq || [];
 		  _gaq.push(['_setAccount', 'UA-1281124-20']);
@@ -40,7 +40,7 @@
 				    */
 				  (function() {
 				   var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-				   dsq.src = 'http://lzyyblog.disqus.com/embed.js';
+				   dsq.src = 'http://timecho.disqus.com/embed.js';
 				   (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
 				  })();
 				</script>
@@ -51,7 +51,7 @@
 					<div id="feed">
 						
 						<div class="badget" id="twt">
-							<a href="http://twitter.com/timecho">
+							<a href="http://twitter.com/jsy2046">
 							<span class="service">twitter</span>
 							<span class="info">600+</span>
 							</a>
