--- a/_layouts/profile.html
+++ b/_layouts/profile.html
@@ -5,7 +5,7 @@
 		<title>时光印迹</title>
 		<link rel="stylesheet" type="text/css" href="/css/style.css" />
 		<link rel="stylesheet" type="text/css" href="/css/syntax.css" />
-		<link rel="alternate" type="application/rss+xml" title="RSS" href="http://feed.feedsky.com/timecho">
+		<link rel="alternate" type="application/rss+xml" title="RSS" href="http://feeds.feedburner.com/timecho">
 		<script type="text/javascript">
 		  var _gaq = _gaq || [];
 		  _gaq.push(['_setAccount', 'UA-1281124-20']);
