--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -37,7 +37,7 @@
 						<li><a href="/projects">PROJECTS</a></li>
 						<li><a href="/about.html">ABOUT</a></li>
 						<li><a href="/geek.html">GEEK</a></li>
-					        <li><a href="/links.html">LINKS</a></li>
+					        <!---<li><a href="/links.html">LINKS</a></li>--->
 						<li><a href="/contact.html">CONTACT</a></li>
 					</ul>
 				</div>
