--- a/_layouts/profile.html
+++ b/_layouts/profile.html
@@ -39,7 +39,7 @@
 						<li><a href="/projects.html">PROJECTS</a></li>
 						<li><a href="/about.html">ABOUT</a></li>
 						<li><a href="/geek.html">GEEK</a></li>
-						<li><a href="/links.html">LINKS</a></li>
+						<!---<li><a href="/links.html">LINKS</a></li>--->
 						<li><a href="/contact.html">CONTACT</a></li>
 					</ul>
 				</div>
